Update info and companies

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                 <a href="#projects" onclick = $("#menu-close").click(); >Projects</a>
             </li>
             <li>
-                <a href="#morecontent" onclick = $("#menu-close").click(); >More About Me</a>
-            </li>
-            <li>
                 <a href="#morecontact" onclick = $("#menu-close").click(); >Contact</a>
             </li>
         </ul>
@@ -102,12 +99,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <div class="row">
+                        <div class="col-sm-4 slideanim myimg">
+                            <a href="https://www.cockroachlabs.com/">
+                                <img src="img/cockroach.jpg">
+                            </a>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="col-sm-8 slideanim">
+                            <h2 style="display: inline">
+                                Cockroach Labs
+                            </h2>
+                            <h3 style="display: inline">
+                                - Backend Engineering Intern
+                            </h3>
+                            <h4 class="pull-right" style="display: inline">
+                                May 2019 - Aug 2019
+                            </h4>
+                        </div>
+                    </div>
+
+                    <br>
+                    <br>
+                    <br>
                 	<div class="row">
                         <div class="col-sm-4 slideanim myimg">
                             <a href="https://www.uber.com/">
                                 <img src="img/uber.png">
                             </a>
                         </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="col-sm-8 slideanim">
                             <h2 style="display: inline">
                                 Uber
@@ -116,12 +143,7 @@
                                 - Software Engineering Intern
                             </h3>
                             <h4 class="pull-right" style="display: inline">
-                                Jan 2019 - Apr 2019 (Expected)
-                            </h4>
-                            <br>
-                            <br>
-                            <h4>
-                                - Winter 2019 intern
+                                Jan 2019 - Apr 2019
                             </h4>
                         </div>
                     </div>
@@ -135,6 +157,10 @@
                                 <img src="img/coursera.png">
                             </a>
                         </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="col-sm-8 slideanim">
                             <h2 style="display: inline">
                                 Coursera
@@ -143,12 +169,7 @@
                                 - Software Engineering Intern
                             </h3>
                             <h4 class="pull-right" style="display: inline">
-                                Sep 2018 - Dec 2018 (Expected)
-                            </h4>
-                            <br>
-                            <br>
-                            <h4>
-                                - Currently working on Scala backend in the Technical Content team
+                                Sep 2018 - Dec 2018
                             </h4>
                         </div>
                     </div>
@@ -162,6 +183,10 @@
                                 <img src="img/bloomberg.png">
                             </a>
                         </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="col-sm-8 slideanim">
                             <h2 style="display: inline">
                                 Bloomberg LP
@@ -171,23 +196,6 @@
                             </h3>
                             <h4 class="pull-right" style="display: inline">
                                 Jan 2018 - Apr 2018
-                            </h4>
-                            <br>
-                            <br>
-                            <h4>
-                                - Worked on the Bloomberg Development Environment (BDE) libraries, a collection of fundamental C++ libraries used throughout Bloomberg
-                            </h4>
-                            <br>
-                            <h4>
-                                - Created a custom encoder for Google Protocol Buffers binary format on top of existing Bloomberg infrastructure, allowing external clients to communicate with Bloomberg services using a common open source framework for serializing structured data
-                            </h4>
-                            <br>
-                            <h4>
-                                - Built an XML schema converter to convert Bloomberg's proprietary XML schemas into schemas for open source data serialization frameworks
-                            </h4>
-                            <br>
-                            <h4>
-                                - Identified and resolved performance bottlenecks in high traffic, performance critical code
                             </h4>
                         </div>
                     </div>
@@ -201,6 +209,10 @@
                                 <img src="img/genesys.png">
                             </a>
                         </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="col-sm-8 slideanim">
                             <h2 style="display: inline">
                                 Genesys
@@ -210,23 +222,6 @@
                             </h3>
                             <h4 class="pull-right" style="display: inline">
                                 Sep 2016 - Dec 2016
-                            </h4>
-                            <br>
-                            <br>
-                            <h4>
-                                - Developed support for a new audio codec on the Genesys Voice Platform, the company's core telecommunications product
-                            </h4>
-                            <br>
-                            <h4>
-                                - Designed and launched an internal tool to aggregate C++ code coverage analysis results from distributed machines
-                            </h4>
-                            <br>
-                            <h4>
-                                - Introduced several Continuous Integration pipelines on Jenkins, streamlining development for recently pushed builds
-                            </h4>
-                            <br>
-                            <h4>
-                                - Improved developer efficiency by automating test status reporting for unit test builds. Results were used daily by all members of the team
                             </h4>
                         </div>
                     </div>
@@ -240,6 +235,10 @@
                                 <img src="img/uwaterloo.jpg">
                             </a>
                         </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="col-sm-8 slideanim">
                             <h2 style="display: inline">
                                 University of Waterloo
@@ -249,15 +248,6 @@
                             </h3>
                             <h4 class="pull-right" style="display: inline">
                                 Jan 2017 - Dec 2017
-                            </h4>
-                            <br>
-                            <br>
-                            <h4>
-                                - Selected as a Teaching Assistant for "Linear Algebra for Engineering" and "Calculus 1 for Honors Mathematics" based on exceptional academic performance
-                            </h4>
-                            <br>
-                            <h4>
-                                - Corrected over 200 weekly assignments for 2nd year Engineering and Math students
                             </h4>
                         </div>
                     </div>
@@ -406,51 +396,6 @@
         </div>
     </section>
 
-    <aside id="morecontent" class="moreaboutme">
-        <div class="text-vertical-center element3">
-        	<div class="container">
-        		<div class="col-md-12">
-            		<h1>A little more about me...</h1>
-            	</div>
-            </div>
-        </div>
-    </aside>
-
-    <section class="morecontent">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="row">
-                        <br>
-                        <div class="col-md-6 slideanim portfolio-item">
-                            <i class="fa fa-book fa-5x" aria-hidden="true"></i>
-                            <h2>EDUCATION</h2>
-                            <h4 align="justify">I am fortunate to be in my degree of choice because I enjoy my Computer Science courses as well as my math courses. I am currently a Teaching Assistant in the <a href="https://uwaterloo.ca/math/">Faculty of Mathematics</a>. I plan on pursuing minors in <a href="https://uwaterloo.ca/combinatorics-and-optimization/">Combinatorics &amp; Optimization</a> and <a href="https://uwaterloo.ca/statistics-and-actuarial-science/">Statistics</a> in the future.</h4>
-                        </div>
-                        <div class="col-md-6 slideanim portfolio-item">
-                            <i class="fa fa-code fa-5x" aria-hidden="true"></i>
-                            <h2>PROGRAMMING</h2>
-                            <h4 align="justify">I started programming when I was 13 with Adobe's <a href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">ActionScript 3</a>. Since then, I have worked with many other languages like Python, C, C++, Java, Scala, etc. I have also learned various algorithms and greatly improved my problem solving ability through self-study, in-class material, and co-op.</h4>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-6 slideanim portfolio-item">
-                            <i class="fa fa-smile-o fa-5x" aria-hidden="true"></i>
-                            <h2>INTERESTS</h2>
-                            <h4 align="justify">In my free time, I am usually working on my <a href="#projects">projects</a> or going through coding problems on sites like <a href="https://leetcode.com/">Leetcode</a>. Some other things you'll find me doing are snowboarding, reading about new technology, hanging out with friends, or taking photos.</h4>
-                        </div>
-                        <div class="col-md-6 slideanim portfolio-item">
-                            <i class="fa fa-list fa-5x" aria-hidden="true"></i>
-                            <h2>BUCKET LIST</h2>
-                            <h4 align="justify">Some things I would like to do include skydiving, <a href="https://www.youtube.com/watch?v=At3xcj-pTjg">flying on a drone</a>, solo backpacking through Europe, and going on a vacation to <a href="http://www.seychelles.travel/">Seychelles</a>.</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <aside id="morecontact" class="morecontact">
         <div class="text-vertical-center element4">
         	<div class="container">
@@ -571,12 +516,6 @@
           $('.element2').crossfade({
             start: 'img/projects.jpg',
             end: 'img/projects2.jpg',
-            threshold: 0.25,
-            backgroundPosition: 'center center'
-          });
-          $('.element3').crossfade({
-            start: 'img/moreaboutme.jpg',
-            end: 'img/moreaboutme2.jpg',
             threshold: 0.25,
             backgroundPosition: 'center center'
           });
